--- a/tensorflow/tf_keras_classfication/my_keras_classfication.ipynb
+++ b/tensorflow/tf_keras_classfication/my_keras_classfication.ipynb
@@ -34,7 +34,9 @@
     "\n",
     "print(sys.version_info)\n",
     "for lib in (pd, tf, np, ml, sklearn, keras):\n",
-    "    print(lib.__name__, lib.__version__)"
+    "    print(lib.__name__, lib.__version__)\n",
+    "    \n",
+    "    "
    ]
   },
   {
@@ -256,7 +258,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
