--- a/tensorflow/tf_keras_classfication/tf_keras_classification_model.ipynb
+++ b/tensorflow/tf_keras_classfication/tf_keras_classification_model.ipynb
@@ -9,14 +9,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.1.0\n",
-      "sys.version_info(major=3, minor=6, micro=9, releaselevel='final', serial=0)\n",
-      "matplotlib 3.1.3\n",
-      "numpy 1.18.1\n",
-      "pandas 1.0.1\n",
-      "sklearn 0.22.1\n",
-      "tensorflow 2.1.0\n",
-      "tensorflow_core.python.keras.api._v2.keras 2.2.4-tf\n"
+      "2.2.0\n",
+      "sys.version_info(major=3, minor=6, micro=8, releaselevel='final', serial=0)\n",
+      "matplotlib 3.2.1\n",
+      "numpy 1.18.4\n",
+      "pandas 1.0.3\n",
+      "sklearn 0.23.1\n",
+      "tensorflow 2.2.0\n",
+      "tensorflow.keras 2.3.0-tf\n"
      ]
     }
    ],
@@ -303,7 +303,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
