--- a/tensorflow/translation/my_transformer.ipynb
+++ b/tensorflow/translation/my_transformer.ipynb
@@ -1499,7 +1499,36 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def evaluate(inp_sentence):\n",
+    "    input_id_sentence = [pt_tokenizer.vocab_size] + pt_tokenizer.encode(inp_sentence) + [pt_tokenizer.vocab_size + 1]\n",
+    "    encoder_input = tf.expand_dims(input_id_sentence, axis=0)\n",
+    "    decoder_input = tf.expand_dims([en_tokenizer.vocab_size], axis=0)\n",
+    "    \n",
+    "    for i in ragne(max_length):\n",
+    "        encoder_padding_mask, decoder_mask, encoder_decoder_padding_mask = create_masks(encoder_input, decoder_input)\n",
+    "        # pred.shape: (batch_size, output_seq_length, vocab_size)\n",
+    "        pred, attention_weights = transformer(encoder_input, decoder_input, False, encoder_padding_mask, decoder_mask, encoder_decoder_padding_mask)\n",
+    "        pred = pred[:, -1, :]\n",
+    "        pred_id = tf.cast(tf.argmax(pred, -1), tf.int32)\n",
+    "        if pred_id == (en_tokenizer.vocab_size + 1):\n",
+    "            return tf.squeeze(decoder_input, axis=0), attention_weights\n",
+    "        \n",
+    "        decoder_input = tf.concat([decoder_input, [pred_id]], axis=-1)\n",
+    "    return tf.squeeze(decoder_input, axis=0), attention_weights\n",
+    "\n",
+    "\n",
+    "def translate(input_sentence, layer_name=''):\n",
+    "    result, attention_weights = evaluate(input_sentence)\n",
+    "    predicted_sentence = en_tokenizer.decode([i for i in result if i < en_tokenizer.vocab_size])\n",
+    "    print(\"Input: {}\".format(input_sentence))\n",
+    "    print(\"Predicted translation: {}\".format(predicted_sentence))\n",
+    "    \n",
+    "    if layer_name:\n",
+    "        plot_encoder_decoder_attention(attention_weights, input_sentence, result, layer_name)\n",
+    "        \n",
+    "translate('xxxxxxxxxxxx', layer_name='decoder_layer4_att2')"
+   ]
   }
  ],
  "metadata": {
@@ -1518,7 +1547,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
